--- a/mdb-spring-boot/src/main/resources/application.properties
+++ b/mdb-spring-boot/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb+srv://<username>:<pwd>@<cluster>.mongodb.net/mygrocerylist
-spring.data.mongodb.database=mygrocerylist
+spring.data.mongodb.uri=mongodb+srv://root:root@omnikhade.bps1hg4.mongodb.net/?retryWrites=true&w=majority&appName=omnikhade
+spring.data.mongodb.database=omnikhade
